@@ -1,18 +1,16 @@
 package com.jd2.moviebase.service;
 
-import com.jd2.moviebase.dto.MovieDTO;
-import com.jd2.moviebase.mapper.MovieMapper;
-import com.jd2.moviebase.model.GenericMapper;
-import com.jd2.moviebase.model.Genre;
+import com.jd2.moviebase.dto.MovieDto;
 import com.jd2.moviebase.model.Movie;
 import com.jd2.moviebase.repository.MovieRepository;
+import com.jd2.moviebase.util.ModelMapper;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class MovieService {
@@ -26,34 +24,33 @@ public class MovieService {
         this.movieRepository = movieRepository;
     }
 
-    public List<MovieDTO> findAll() {
+    public List<MovieDto> findAll() {
         logger.info("Executing method: findAll()");
         List<Movie> movies = movieRepository.findAll();
         return movies.stream()
-                .map(GenericMapper::movieToDto)
-                .toList();
-
+                .map(ModelMapper::toMovieDto)
+                .collect(Collectors.toList());
     }
 
-    public MovieDTO findById(int id) {
+    public MovieDto findById(int id) {
         logger.info("Executing method: findById(id={})", id);
         Movie movie = movieRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Movie not found with id: " + id));
-        return GenericMapper.movieToDto(movie);
+        return ModelMapper.toMovieDto(movie);
     }
 
-    public MovieDTO create(MovieDTO movieDTO){
-        logger.info("Executing method: create(genre={})", movieDTO);
-        Movie movie = GenericMapper.movieDtoToModel(movieDTO);
+    public MovieDto create(MovieDto movieDto){
+        logger.info("Executing method: create(genre={})", movieDto);
+        Movie movie = ModelMapper.toMovie(movieDto);
         Movie createdMovie = movieRepository.create(movie);
-        return GenericMapper.movieToDto(createdMovie);
+        return ModelMapper.toMovieDto(createdMovie);
     }
 
-    public MovieDTO update(MovieDTO movieDTO){
-        logger.info("Executing method: update(genre={})", movieDTO);
-        Movie movie = GenericMapper.movieDtoToModel(movieDTO);
+    public MovieDto update(MovieDto movieDto){
+        logger.info("Executing method: update(genre={})", movieDto);
+        Movie movie = ModelMapper.toMovie(movieDto);
         Movie updatedMovie = movieRepository.update(movie);
-        return GenericMapper.movieToDto(updatedMovie);
+        return ModelMapper.toMovieDto(updatedMovie);
     }
 
     public void deleteByID(int id){
